commit ex-6
