# internal/app/model/user.go
@@ -1,0 +1,24 @@
+package model
+
+import (
+	"github.com/google/uuid"
+	"gorm.io/gorm"
+	"time"
+)
+
+type User struct {
+	ID          string `json:"id" gorm:"type:uuid;primaryKey"`
+	Username    string `json:"username" gorm:"unique"`
+	Password    string `json:"-"`
+	Email       string `json:"email" gorm:"unique"`
+	DisplayName string `json:"display_name"`
+	CreatedAt   time.Time `json:"created_at"`
+	UpdatedAt   time.Time `json:"updated_at"`
+}
+
+func (u *User) BeforeCreate(tx *gorm.DB) (err error) {
+	if u.ID == "" {
+		u.ID = uuid.New().String()
+	}
+	return
+}
